fixed overflow in main content

--- a/client/src/pages/Homepage/styles.scss
+++ b/client/src/pages/Homepage/styles.scss
@@ -1,6 +1,8 @@
 main {
-  .cover-photo {
+  .main-content {
     position: relative;
+    display: flex;
+    justify-content: center;
     width: auto;
     height: auto;
 
@@ -10,10 +12,11 @@ main {
       top: 0;
       left: 0;
       right: 0;
-      height: 20px;
+      height: 30px;
       background: linear-gradient(to bottom, #080808, transparent);
     }
 
+    // COVER IMAGE 
     img {
       width: 100%;
       height: auto;
